--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/summer.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/summer.css
@@ -21,3 +21,14 @@
 html {
     scroll-behavior: smooth;
 }
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+:root {
+    --font-label: 12px;
+    --font-page-title: 28px;
+    --font-title: 24px;
+    --font-body: 14px;
+}
