--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
@@ -130,6 +130,10 @@
   height: auto;
 }
 
+.na-section.homepage-section-wrapper{
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
 
 .na-section.homepage-banner {
   padding-top: 100px;
@@ -139,11 +143,7 @@
   color: #fff;
 }
 
-.na-section.bg-light-purple {
-  position: relative;
-  z-index: 0;
-  margin-top: -98px;
-  padding-top: 124px;
+.bg-light-purple{
   background-color: #FAFAFD;
 }
 
@@ -219,6 +219,7 @@
 }
 
 .homepage-subtitle {
+  margin-top: 30px;
   position: static;
   color: #969696;
   font-size: 12px;
@@ -232,9 +233,9 @@
   height: 50px;
 }
 
-.homepage-section-wrapper{
-  padding-top: 100px;
-}
+
+
+/* our client*/
 
 #our-client-img{
   margin-right: 50px;
@@ -243,7 +244,6 @@
   height: 240px;
 }
 
-
 #our-client-description{
   margin-top: 45px;
 }
@@ -251,7 +251,53 @@
 #our-client-button{
   width: 300px;
   height: 70px;
+}
 
+/* our project*/
+
+#our-project-img{
+  margin-left: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 50%;
+  height: auto;
+}
+
+#our-project-description{
+  margin-top: 45px;
+  width: 100%;
+}
+
+#our-project-content{
+  width: 50%;
+}
+
+.numbers-wrapper{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+.project-numbers{
+  display: flex;
+  flex-direction: column;
+}
+
+.project-numbers h1{
+  font-weight: bold;
+  font-size: 40px;
+  background: -webkit-linear-gradient(#EE4266, #3420AD);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+}
+
+.project-numbers h2{
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  color: #333333;
 }
 
 .columns {
@@ -326,7 +372,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  padding: 10% 10px 10% 10%;
+  padding: 15% 15% 15% 15%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
