--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
@@ -361,7 +361,7 @@
 }
 
 .about-banner {
-  width: 100%;
+  width: 50%;
   height: auto;
   margin-top: 60px;
   margin-bottom: 150px;
@@ -370,12 +370,13 @@
 
 .section-title {
   position: static;
-  margin-left: 0%;
+  width: 100%;
+  /*margin-left: 220px;*/
   color: #000;
   font-size: 40px;
   line-height: 1em;
   font-weight: 700;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
 }
 
 .section-title.page-center {
@@ -455,6 +456,7 @@
   top: 0px;
   right: -50px;
   max-height: 550px;
+  object-fit: none;
 }
 
 .button {
@@ -575,7 +577,7 @@
   justify-content: flex-start;
   flex-wrap: wrap-reverse;
   border-radius: 25px;
-  background: #CACAEA;
+  background: #F7F7FC;
 }
 
 .flexblock-heading {
@@ -598,6 +600,26 @@
   text-align: left;
 }
 
+.flexblock-heading-right {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 150px;
+  min-width: 180px;
+  margin: 20px 5px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  text-align: right;
+}
+
 .flex-horizontal-container {
   display: -webkit-box;
   display: -webkit-flex;
@@ -611,6 +633,7 @@
   -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+  padding-bottom: 2%;
 }
 .flex-horizontal-container-right {
   display: -webkit-box;
@@ -625,6 +648,7 @@
   -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+  padding-bottom: 2%;
 }
 .emily-headshot {
   width: 100%;
@@ -647,8 +671,13 @@
   font-size: 14px;
   line-height: 1.5em;
   font-style: italic;
-  font-weight: 400;
-  padding: 7%;
+  font-weight: 600;
+  padding-left: 7%;
+  padding-right: 7%;
+  padding-top: 5%;
+  padding-bottom: 3.5%;
+  font-size: 14pt;
+  color: #9477D1;
 }
 
 .text-descript-2 {
@@ -656,21 +685,31 @@
   color: #4f4f4f;
   font-size: 14px;
   line-height: 1.5em;
-  font-style: italic;
+  font-style: normal;
   font-weight: 400;
   padding-left: 50px;
+  padding-bottom: 30px;
   float: left;
 }
 
 .text-descript-3 {
-  width: 50%;
+  width: 40%;
   color: #4f4f4f;
   font-size: 14px;
   line-height: 1.5em;
-  font-style: italic;
+  font-style: normal;
   font-weight: 400;
-  padding-left: 50px;
+  padding-left: 2.5px;
+  padding-right: 50px;
+  padding-bottom: 20px;
   float: right;
+}
+
+.text-descript-header{
+  /*padding-top: 10%;*/
+  padding-bottom:3%;
+  color: #9477D1;
+  opacity: 60%;
 }
 
 .about-name {
@@ -678,6 +717,18 @@
   line-height: 2em;
   font-weight: 700;
   font-size: var(--font-title);
+}
+
+.blog-box {
+  width: 60px;
+  height: 60px;
+  fill: orange;
+}
+
+.section-body{
+  margin: auto;
+  width: 80%;
+  justify-content: center;
 }
 
 .link {
@@ -1408,7 +1459,6 @@ html.w-mod-js *[data-ix="new-interaction"] {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    /*text-align: right;*/
   }
   .emily-headshot {
     height: 200px;
@@ -1667,6 +1717,7 @@ html.w-mod-js *[data-ix="new-interaction"] {
   .about-banner {
     margin-bottom: 40px;
     padding-top: 120px;
+    overflow: auto;
   }
   .section-title {
     font-size: 20px;
@@ -1705,11 +1756,13 @@ html.w-mod-js *[data-ix="new-interaction"] {
     -ms-flex-pack: distribute;
     justify-content: space-around;
   }
+
   .flex-horizontal-container-right {
     -webkit-justify-content: space-around;
     -ms-flex-pack: distribute;
     justify-content: space-around;
   }
+
   .team-img {
     position: relative;
     top: -40px;
