--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
@@ -411,7 +411,19 @@
   box-shadow: 1px 1px 8px 0 #d9d9d9;
 }
 
-.hp.proced
+.hp-process-bar{
+  width: 90%;
+  height: auto;
+  margin-top: 40px;
+}
+
+#our-team{
+  margin-bottom: 0px;
+  padding-top: 300px;
+  margin-top: -300px;
+  position: relative;
+  z-index: -300;
+}
 
 .image-2 {
   width: auto;
