--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
@@ -259,8 +259,8 @@
 #our-client-img{
   margin-right: 50px;
   margin-top: 45px;
-  width: 470px;
-  height: 240px;
+  width: 50%;
+  height: auto;
 }
 
 #our-client-description{
@@ -279,6 +279,7 @@
   margin-top: 30px;
   margin-bottom: 30px;
   width: 50%;
+  height: auto;
   height: auto;
 }
 
@@ -359,7 +360,7 @@
   line-height: 2em;
 }
 
-.column {
+.hp-process-card-wrapper {
   margin-top: 40px;
   -webkit-align-self: stretch;
   -ms-flex-item-align: stretch;
@@ -369,26 +370,6 @@
   -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
   flex: 0 auto;
-}
-
-.column-2 {
-  margin-top: 40px;
-  border: 1px none #000;
-}
-
-.column-3 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 40px;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-align-content: stretch;
-  -ms-flex-line-pack: stretch;
-  align-content: stretch;
-  border: 1px none #000;
 }
 
 .hp-process-card {
