clean up homepage

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -1,4 +1,4 @@
-@import "summer.css";
+@import "variables.css";
 
 .utility-page-wrap {
   display: -webkit-box;
@@ -50,44 +50,25 @@
 }
 
 .button-solid {
-  position: relative;
-  display: inline-block;
-  width: 90%;
-  height: 50px;
-  padding-top: 15px;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-  -webkit-box-ordinal-group: 2;
-  -webkit-order: 1;
-  -ms-flex-order: 1;
-  order: 1;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
-  border-style: none;
-  border-width: 1px;
-  border-color: #000;
-  border-radius: 30px;
-  /*background-color: hsla(347.44186046511624, 83.50%, 59.61%, 1.00);
-  background-image: linear-gradient(186deg, #ee4266, #e2c8e9); */
+  padding: .5em;
+  line-height: 2em;
+  border-radius: 1.5em;
   color: #fff;
-  font-size: 20px;
+  font-weight: 600;
   text-align: center;
+  text-decoration: none;
 }
 
-.button-solid.button-red {
-  background-color: #EE4266;
+.red-bg {
+  background-color: var(--color-red);
 }
 
-.button-solid.button-blue {
-  background-color: #2047AD;
+.blue-bg {
+  background-color: var(--color-dark-blue);
 }
 
-.button-solid.button-purple {
-  background-color: #9477D1;
+.purple-bg {
+  background-color: var(--color-purple)
 }
 
 .button-solid.button-gradient-blue {
@@ -121,21 +102,17 @@
   color: hsla(347, 83%, 60%, 1.00);
 }
 
-.na-section {
+.homepage-section-wrapper{
   display: flex;
-  justify-content: center;
-  position: relative;
-  z-index: 1;
-  width: 100%;
-  height: auto;
+  flex-direction: column;
+  align-items: center;
+  padding: 80px 0 60px 0;
 }
 
-.na-section.homepage-section-wrapper{
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
-
-.na-section.homepage-banner {
+.homepage-banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 100px;
   height: 400px;
   background-image: url('../images/homepage/0-banner-bg.png');
@@ -154,42 +131,35 @@
 }
 
 .hp-banner-title {
-  position: relative;
   z-index: 2;
-  display: block;
-  margin-top: 20px;
-  margin-left: 0px;
-  font-size: 40px;
+  font-size: var(--font-page-title-home);
   line-height: 2em;
-  font-style: normal;
   font-weight: 600;
-  text-align: left;
 }
 
 .hp-banner-paragraph {
   width: 55%;
   margin-top: 20px;
-  font-size: 16px;
-  line-height: 150%;
+  font-size: var(--font-body-large);
+  line-height: 180%;
   font-weight: 300;
 }
 
-.body {
-  max-width: none;
+body {
   padding-right: 0%;
   padding-left: 0%;
   color: #333;
-  font-size: 16px;
-  line-height: 1em;
+  font-size: 14px;
+  line-height: 1.8em;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
 .banner-img {
   position: relative;
   align-self: flex-end;
-  top: -110px;
+  top: -60px;
   width: 400px;
-  height: auto;
 }
 
 .div-centered-v {
@@ -200,21 +170,19 @@
   flex-direction: column;
 }
 
-.div-centered-row {
-  width: 68vw;
-  max-width: 1100px;
-  min-width: 800px;
+.flex-h {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: flex-start;
+  padding-top: 30px;
 }
 
 .footer-wrapper{
   display: flex;
-  width: 100%;
-  align-items: center;
+  box-shadow: 0 -1px 5px 0 rgba(0, 0, 0, .05);
   justify-content: center;
-  margin: 0px;
+  padding: 20px;
 }
 
 .footer-wrapper img {
@@ -224,7 +192,7 @@
 .footer-wrapper p {
   color: #969696;
   font-size: 14px;
-  margin: 20px;
+  margin: 0 5px;
 }
 
 
@@ -238,38 +206,41 @@
 }
 
 .homepage-subtitle {
-  margin-top: 50px;
-  position: static;
   color: #969696;
-  font-size: 12px;
+  font-size: var(--font-label);
 }
 
 .homepage-title {
-  font-size: 36px;
+  font-size: var(--font-title);
   font-weight: 600;
-  padding-top: 15px;
-  font-weight: 600;
-  height: 50px;
+  line-height: 2em;
 }
 
 
 
 /* our client*/
 
-#our-client-img{
-  margin-right: 50px;
-  margin-top: 45px;
+.image{
   width: 50%;
-  height: auto;
 }
 
-#our-client-description{
-  margin-top: 45px;
+.image.left {
+  padding-right: 30px;
 }
 
-#our-client-button{
-  width: 300px;
-  height: 70px;
+.image.right {
+  padding-left: 30px;
+}
+
+.shadowed {
+  margin-left: -10px;
+}
+
+.img-button{
+  height: 3.5em;
+  margin-top: 1em;
+  object-fit: contain;
+  align-self: flex-start;
 }
 
 /* our project*/
@@ -283,19 +254,13 @@
   height: auto;
 }
 
-#our-project-description{
-  margin-top: 45px;
-  width: 100%;
-}
-
 #our-project-content{
   width: 50%;
 }
 
-.numbers-wrapper{
+.even-wrapper{
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
   justify-content: space-around;
 }
 
@@ -328,30 +293,6 @@
   margin-bottom: 50px;
 }
 
-.columns {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  height: auto;
-  margin-top: 20px;
-  margin-bottom: 0px;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  opacity: 1;
-}
-
 .body-paragraph {
   margin-top: 20px;
   margin-bottom: 30px;
@@ -361,49 +302,27 @@
 }
 
 .hp-process-card-wrapper {
-  margin-top: 40px;
-  -webkit-align-self: stretch;
-  -ms-flex-item-align: stretch;
-  -ms-grid-row-align: stretch;
+  margin: 0 10px;
   align-self: stretch;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
-}
-
-.hp-process-card {
-  position: static;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  padding: 15% 15% 15% 15%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  padding: 30px;
   border: 3px none #000;
-  border-radius: 0px;
   background-color: #fff;
   box-shadow: 1px 1px 8px 0 #d9d9d9;
+  display: flex;
+  flex-direction: column;
 }
 
-.hp-process-bar{
-  width: 90%;
-  height: auto;
+.hp-process-bar {
+  max-width: 100%;
   margin-top: 40px;
+  align-self: center;
 }
 
-#our-team{
-  margin-bottom: 0px;
+.overflow-top {
   padding-top: 300px;
   margin-top: -300px;
   position: relative;
-  z-index: -300;
+  z-index: -1;
 }
 
 .image-2 {
@@ -413,27 +332,27 @@
 }
 
 .card-title {
-  color: #ee4266;
-  font-size: 28px;
-  line-height: 1em;
+  font-size: var(--font-card-title);
+  line-height: 3em;
+  font-weight: 600;
 }
 
-.card-title.blue-text {
-  color: #2047ad;
+.blue-text {
+  color: var(--color-dark-blue);
 }
 
-.card-title.purple-text {
-  color: #9a80d3;
+.red-text {
+  color: var(--color-red);
 }
 
-.image-3 {
+.purple-text {
+  color: var(--color-purple);
+}
+
+.icon {
   width: 50px;
   height: 50px;
-  margin-bottom: 20px;
-}
-
-.image-3.bulb {
-  width: 40px;
+  object-fit: contain;
 }
 
 .text-block-2 {
@@ -446,20 +365,6 @@
   color: #9a80d3;
   font-size: 24px;
   line-height: 24px;
-}
-
-.footnote {
-  position: static;
-  display: block;
-  padding: 40px 5%;
-  grid-auto-columns: 1fr;
-  grid-column-gap: 16px;
-  grid-row-gap: 16px;
-  -ms-grid-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: auto auto;
-  grid-template-rows: auto auto;
-  box-shadow: 0 -1px 5px 0 rgba(0, 0, 0, .05);
 }
 
 .about-banner {
@@ -498,18 +403,6 @@
   font-weight: 700;
 }
 
-.normal-text {
-  display: block;
-  width: auto;
-  max-width: none;
-  min-width: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: #333333;
-  font-size: 14px;
-  line-height: 170%;
-}
-
 .normal-text.page-banner-text {
   max-width: 55%;
   padding-top: 40px;
@@ -535,10 +428,8 @@
   float: none;
 }
 
-.normal-text.process-card-text{
-  font-size: 14px;
-  line-height: 170%;
-  color: #656565;
+.card-text{
+  font-size: var(--font-body-small);
   margin-bottom: 25px;
 }
 
@@ -1297,23 +1188,6 @@ html.w-mod-js *[data-ix="new-interaction"] {
   .button-solid {
     margin-top: 40px;
   }
-  .na-section {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    grid-auto-columns: 1fr;
-    grid-column-gap: 16px;
-    grid-row-gap: 16px;
-    -ms-grid-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: auto auto;
-    grid-template-rows: auto auto;
-    font-size: 1em;
-  }
-  .body {
-    font-size: 16px;
-  }
   .hp-banner-paragraph {
     width: 100%;
   }
@@ -1331,9 +1205,6 @@ html.w-mod-js *[data-ix="new-interaction"] {
 
   .homepage-title {
     font-size: 36px;
-  }
-  .columns {
-    display: block;
   }
   .section-title {
     font-size: 32px;
@@ -1461,9 +1332,6 @@ html.w-mod-js *[data-ix="new-interaction"] {
 }
 
 @media (max-width: 767px) {
-  .body {
-    font-size: 16px;
-  }
   .hp-banner-paragraph {
     width: 100%;
   }
