--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -113,8 +113,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
-  height: 400px;
+  padding-top: 150px;
+  height: 450px;
   background-image: url('../images/homepage/0-banner-bg.png');
   background-size: cover;
   color: #fff;
@@ -1309,9 +1309,37 @@ body {
 }
 
 .navbar {
-  height: 60px;
+  width: 100%;
+  padding: 0 50px;
+  position: fixed;
+  height: 50px;
+  color: #333;
   background-color: #fff;
   box-shadow: 1px 1px 3px 0 hsla(0, 0%, 87%, .49);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-brand {
+}
+
+.nav-brand img {
+  height: 25px;
+}
+
+.navbar a{
+  text-decoration: none;
+  padding: 0 20px;
+}
+
+.navbar.homepage {
+  background-color: #ffffff22;
+  box-shadow: none;
+}
+
+.navbar.homepage a{
+  color: white;
 }
 
 .nav-link {
@@ -1431,6 +1459,10 @@ html.w-mod-js *[data-ix="new-interaction"] {
   -webkit-transform: translate(0px, 0px);
   -ms-transform: translate(0px, 0px);
   transform: translate(0px, 0px);
+}
+
+.mobile {
+  display: none;
 }
 
 @media (max-width: 991px) {
@@ -1569,6 +1601,13 @@ html.w-mod-js *[data-ix="new-interaction"] {
   }
   .navbar {
     color: #333;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 50px;
+  }
+  .navbar.homepage {
+    background-color: #ffffff22;
+    color: white;
   }
   .menu-button {
     background-color: #fff;
