--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/variables.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/variables.css
@@ -27,15 +27,16 @@ body {
 }
 
 :root {
-    --font-label: 12px;
-    --font-page-title: 28px;
-    --font-page-title-home: 40px;
-    --font-title: 30px;
-    --font-body: 14px;
-    --font-body-small: 12px;
-    --font-body-large: 16px;
-    --font-card-title: 20px;
+    --page-h1: 60px;
+    --page-h2: 40px;
+    --h1: 32px;
+    --h2: 26px;
+    --h3: 22px;
+    --b1: 18px;
+    --b2: 16px;
+    --b3: 14px;
     --color-red: #EE4266;
     --color-dark-blue: #2047AD;
     --color-purple: #9477D1;
+    --color-light-purple: #9477D199;
 }
