--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -118,6 +118,10 @@ body {
   padding: 30px 0;
 }
 
+.no-padding.smaller-section {
+  padding: 0px 0;
+}
+
 .space-above {
   margin-top: 30px;
 }
@@ -354,6 +358,7 @@ body {
   padding: 30px;
   border-radius: 25px;
   background: #F7F7FC;
+  width: 100%;
 }
 .big-quote {
   font-style: italic;
